card, current page, navsearch, icons, flag, url, unknown city

--- a/current.html
+++ b/current.html
@@ -42,13 +42,12 @@
     </header>
     <main class="container-lg mt-4">
         <form class="p-4 text-center" id="searchForm">
-            <h1 class="display-4 text-center">Entrez le nom d'une ville</h1>
-            <small>Si la ville affichée n'est pas la bonne, ajouter une virgule puis le diminutif du pays de la ville souhaitée</small>
             <div class="form-group">
                 <input type="text" class="form-control text-center" id="search" placeholder="Où habitez-vous ?">
             </div>
             <button type="submit" class="btn btn-info btn-lg text-light mt-3">Voir</button>
         </form>
+        <div class="d-flex justify-content-center" id="result"></div>
     </main>
     <footer class="container-lg mt-4">
         <div class="alert bg-info text-light">
@@ -61,7 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
     <script src="js/countries.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/current.js"></script>
 </body>
 
 </html>
