--- a/weather.html
+++ b/weather.html
@@ -60,7 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"></script>
     <script src="js/countries.js"></script>
-    <script src="js/current.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 
 </html>
