--- a/forecast.html
+++ b/forecast.html
@@ -27,7 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="./">Home</a>
+                        <a class="nav-link" href="./">Current</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./forecast.html">Forecast</a>
                     </li>
                 </ul>
                 <form class="d-flex" id="navSearchForm">
