--- a/weather.html
+++ b/weather.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
 </head>
 
 <body>
@@ -27,7 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="./">Home</a>
+                        <a class="nav-link" href="./">Current</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./forecast.html">Forecast</a>
                     </li>
                 </ul>
                 <form class="d-flex" id="navSearchForm">
@@ -47,7 +58,10 @@
             </div>
             <button type="submit" class="btn btn-info btn-lg text-light mt-3">Voir</button>
         </form>
-        <div class="d-flex justify-content-center" id="result"></div>
+        <div class="row">
+            <div class="col-6" id="mymap"></div>
+            <div class="col-6 d-flex justify-content-center" id="result"></div>
+        </div>
     </main>
     <footer class="container-lg mt-4">
         <div class="alert bg-info text-light">
@@ -64,3 +78,5 @@
 </body>
 
 </html>
+<script>
+</script>
