titres, description forecast

--- a/forecast.html
+++ b/forecast.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
     <header class="container-lg bg-info text-light rounded-bottom p-5">
-        <h1 class="display-1">Météo</h1>
+        <h1 class="display-4">Météo des prochains jours</h1>
     </header>
     <main class="container-lg mt-4">
         <div id="forecast"></div>
