--- a/weather.html
+++ b/weather.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <header class="container-lg bg-info text-light rounded-bottom p-5">
-        <h1 class="display-1">Météo</h1>
+        <h1 class="display-3">Météo actuelle</h1>
     </header>
     <main class="container-lg mt-4">
         <form class="p-4 text-center" id="searchForm">
